--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 
 :root {
   --clr-background-blue: #151b28;
+  --clr-deep-blue: #1d273b;
   --clr-main-blue: #006496;
   --clr-light-blue: #88d7ff;
   --clr-main-white: #fff;
@@ -27,7 +28,7 @@ body {
 
 header {
   background-color: var(--clr-background-blue);
-  padding: 1em;
+  padding: 1em 0;
 }
 
 .header-container {
@@ -57,6 +58,64 @@ nav ul {
   color: var(--clr-light-gray);
   font-size: 0.9rem;
 }
+
+.about {
+    width: 90%;
+    margin: 0 auto;
+    border: 1px solid #fff;
+}
+
+.about-text-container .wave {
+    font-size:1.2rem;
+    color: var(--clr-main-white);
+    font-weight: 700;
+    font-family: "Ubuntu", sans-serif;
+}
+
+.about-text-container h1 {
+    font-size: clamp(3rem, 7vw, 4rem);
+    color: var(--clr-main-white);
+    font-weight: 700;
+    font-family: "Ubuntu", sans-serif;
+}
+
+.about-text-container h1 span {
+    color: var(--clr-main-blue);
+}
+
+.about-text-container p {
+    color: var(--clr-main-white);
+    font-size: 0.9rem;
+    margin-top: 0.2rem;
+}
+
+.about-text-container p span {
+    color: var(--clr-light-blue);
+}
+
+.resume-talk {
+    margin: 2rem 0;
+}
+
+.resume-talk a {
+    text-decoration: none;
+    color: var(--clr-main-white);
+    background-color: var(--clr-deep-blue);
+    padding: 1em 2em;
+    margin-right: 0.5rem;
+    font-size: clamp(0.9rem, 7vw, 1rem);
+}
+
+.socials a {
+  color: #ffffff00;
+  text-decoration: none;
+}
+
+.socials img {
+  width: 25px;
+  margin-right: 0.5rem;
+}
+
 
 @media (max-width: 700px) {
   .nav-links {
