--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 :root {
   --clr-background-blue: #151b28;
   --clr-deep-blue: #1d273b;
-  --clr-main-blue: #006496;
+  --clr-main-blue: #2196f3;
   --clr-light-blue: #88d7ff;
   --clr-main-white: #fff;
   --clr-light-gray: #d4d4d4;
