--- a/style.css
+++ b/style.css
@@ -366,6 +366,22 @@ footer p {
 @media (max-width: 700px) {
   .nav-links {
     display: none;
+    flex-direction: column;
+    gap: 1.5rem;
+    justify-content: center;
+  }
+
+  .menu-bar {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+
+  .menu-bar .bar {
+    width: 30px;
+    height: 2.5px;
+    border-radius: 5px;
+    background-color: var(--clr-light-gray);
   }
 }
 
